--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -13,10 +13,14 @@ body {
 }
 
 nav {
+	position: fixed;
+	top: 0;
 	font-family: "Lato", sans-serif;
 	background: #d9d7d7;
 	width: 100%;
 	padding: 10px 0;
+	transition: top 0.5s;
+	z-index: 10;
 }
 
 nav .menu {
@@ -25,7 +29,22 @@ nav .menu {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	flex-wrap: wrap;
 	padding: 0 20px;
+}
+
+.checkbtn {
+	display: none;
+}
+
+input[type=checkbox] {
+  position: absolute;
+  top: -9999px;
+  left: -9999px;
+}
+
+#check {
+	display: none;
 }
 
 .title {
@@ -35,6 +54,7 @@ nav .menu {
 
 .menu ul {
 	display: inline-flex;
+
 }
 
 .menu ul li {
@@ -70,32 +90,35 @@ nav .menu {
 }
 
 .center {
-	/*position: absolute;
-	top: 52%;
-	left:50%;
-	transform: translate(-50%, -50%);*/
-	padding: 100px 20px;
-	/*width: 90%;*/
+	margin-top: 250px;
+	padding: 50px 50px;
 }
 
 .intro-text {
 	font-size: 2rem;
+	text-align: center;
 }
 
 .portfolio-gallery {
 	position: relative;
 	margin-left: auto;
   	margin-right: auto;
-	width: 95%;
+	width: 75%;
+	/*padding-bottom: 56.25%;*/
 }
 
 .portfolio-img, .img-overlay {
-	position: absolute;
+	/*position: absolute;*/
 	display: block;
-  	height: 600px;
+  	height: auto;
   	width: 100%;
   	top: 0;
   	left: 0;
+  	margin-bottom: 50px;
+}
+
+.portfolio-img {
+	object-fit: cover;
 }
 
 .img-overlay {
@@ -115,24 +138,21 @@ nav .menu {
     right:0;
     bottom:0;
     color:#fff;
-    font-size: 2rem;
+    font-size: 3vw;
+    font-weight: 600;
     text-align: center;
-   	height: 100px;
+   	top: 50%;
    	z-index: 1;
 }
 
-/*.img-caption: hover .portfolio-img {
-	opacity: 0.7
-}*/
-
-/*.img-overlay:hover .portfolio-img {
-	display: none;
-}*/
+.img-caption:hover ~ .portfolio-img {
+	opacity: 0.7;
+}
 
 footer {
 	/*left: 0;
 	bottom: 0;*/
-	margin-top: 800px;
+	margin-top: 100px;
 	width: 100%;
 	text-align: center;
 	padding: 20px 0;
@@ -159,4 +179,48 @@ hr {
 a {
 	text-decoration: none;
 	color: #1c1c1c;
+}
+
+@media all and (max-width: 800px) {
+  .title {
+  	text-align: left;
+  	float: left;
+  }
+  .title {
+  	font-size: 2rem;
+  }
+  .subtitle {
+  	font-size: 1rem;
+  }
+  .checkbtn {
+  	/*position: absolute;
+  	right: 0;*/
+  	display: block;
+  	font-size: 2rem;
+	color: black;
+	float: right;
+	line-height: 80px;
+	margin-right: 20px;
+	cursor: pointer;
+	user-select: none;
+  }
+  nav {
+  	background: #c2c0c0;
+  }
+  .menu ul {
+  	display: none;
+  	height: 100%;
+  }
+  span:hover, span.active {
+	border-bottom: 5px solid #FF8C00;
+  }
+  input[type="checkbox"]:checked ~ ul {
+  	display: block;
+  	width: 100%;
+  }
+  input[type="checkbox"]:checked ~ ul>li {
+  	padding: 20px 10px;
+  	text-align: center;
+  	flex-direction: column;
+  }
 }
