--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -90,12 +90,13 @@ input[type=checkbox] {
 }
 
 .center {
-	margin-top: 250px;
+	margin-top: 100px;
 	padding: 50px 50px;
 }
 
 .intro-text {
 	font-size: 2rem;
+	font-weight: 400;
 	text-align: center;
 }
 
